<resources>
    <string name="app_name">Guia</string>
    <string name="signIn">Entre</string>
    <string name="or">ou</string>
    <string name="signUp">Cadastre-se</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="logIn">Entrar</string>
    <string name="forgotPass">Esqueci minha senha</string>
    <string name="forgetPass">Esqueceu sua senha?</string>
    <string name="messagePass">Por favor, informe seu email para enviarmos uma senha temporária</string>
    <string name="cancel">Cancelar</string>
    <string name="send">Enviar</string>
    <string name="name">Nome</string>
    <string name="dateOfBirth">Data de nascimento</string>
    <string name="language">Idioma</string>
    <string name="localization">Localização</string>
    <string name="toContinue">Continuar</string>
    <string name="ok">OK</string>
    <string name="meetCulture">Conheça outra cultura</string>
    <string name="toStart">Para começar, busque um guia</string>
    <string name="random">Aleatório</string>
    <string name="byRegion">Por região</string>
    <string name="checkInterests">Marque seus interesses</string>
    <string name="art">Arte</string>
    <string name="cooking">Culinária</string>
    <string name="culture">Cultura</string>
    <string name="sport">Esporte</string>

    <string name="profile">Perfil</string>
    <string name="guide">Guia</string>
    <string name="settings">Configurações</string>
    <string name="chats">Conversas</string>
    <string name="changeInterests">Alterar interesses</string>
    <string name="logout">Sair</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="error_invalid_email">Email inválido</string>
    <string name="error_field_required">Campo obrigatório</string>

    <string name="save">Salvar</string>

    <string name="reject">Rejeitar</string>
    <string name="accept">Aceitar</string>
    <string name="currently">Atualmente em</string>
    <string name="timeThere">Horário de lá</string>
    <string name="waitingReply">Aguardando resposta</string>
    <string name="guideRejected">O guia rejeitou a conexão</string>
    <string name="tryAgain">Tente novamente</string>

    <string name="write">Escreva</string>
    <string name="buttonCam">Enviar imagem</string>
    <string name="buttonSend">Enviar texto informado</string>
    <string name="automaticTranslation">Tradução automática</string>
    <string name="suggestions">Sugestões</string>
    <string name="reportGuide">Denunciar guia</string>
    <string name="leftSession">Abandonar sessão</string>

    <string-array name="list_languages">
        <item>English</item>
        <item>Español</item>
        <item>Português-BR</item>
    </string-array>
    <string-array name="list_locale">
        <item>en</item>
        <item>es</item>
        <item>pt</item>
    </string-array>

    <string name="cook1">Prato típico da sua região</string>
    <string name="cook2">Cardápio de um restaurante/ bar</string>
    <string name="cook3">Seu prato favorito</string>
    <string name="cook4">Melhor restaurante</string>
    <string name="cook5">Petisco típico em bares</string>
    <string name="cook6">Prato exótico</string>
    <string name="cook7">Café da manhã típico</string>
    <string name="cook8">O que não pode deixar de conhecer</string>

    <string name="culture1">Algo escrito na sua língua</string>
    <string name="culture2">Festa típica</string>
    <string name="culture3">Transporte público da sua cidade</string>
    <string name="culture4">Arquitetura da cidade</string>
    <string name="culture5">Comércio/ Shopping/ Loja</string>
    <string name="culture6">Praia / Lago / Cachoeira</string>
    <string name="culture7">Rua importante</string>
    <string name="culture8">Foto da sua mesa de trabalho/ escola/ faculdade</string>
    <string name="culture9">Foto da sua escola/ faculdade</string>
    <string name="culture10">O que não pode deixar de conhecer</string>

    <string name="art1">Museu / Teatro</string>
    <string name="art2">Casa de shows</string>
    <string name="art3">Capa do CD favorito</string>
    <string name="art4">Livraria</string>
    <string name="art5">Obra de arte</string>
    <string name="art6">Centro histórico</string>
    <string name="art7">Balada / Festival / Show</string>
    <string name="art8">O que não pode deixar de conhecer</string>

    <string name="others">Outros</string>
    <string name="others1">Mostre como está o tempo</string>
    <string name="others2">Mostre sua vista</string>
    <string name="others3">Seu lugar favorito na cidade</string>
    <string name="others4">Seu ambiente de estudo</string>
    <string name="others5">Cômodo da sua casa</string>
    <string name="others6">Sua rua</string>
    <string name="others7">Belezas naturais</string>
    <string name="others8">Hospedagem</string>

    <string name="yourMessage">Sua mensagem</string>
    <string name="guideMessage">Mensagem do guia</string>

    <string name="camera">Câmera</string>
    <string name="photo_library">Galeria de fotos</string>

    <string name="searchingGuide">Procurando…</string>
    <string name="noneGuide">Nenhum guia disponível no momento, mas continuaremos a busca!</string>
    <string name="interests">Interesses</string>
    <string name="successfulRegister">Cadastrado com sucesso</string>
    <string name="saveProfile">Atualizado com sucesso!</string>
    <string name="permission">Permissão</string>
    <string name="AGREE">PERMITIR</string>
    <string name="DENY">NEGAR</string>
    <string name="messageAskPermissionAgain">Para realizar seu cadastro precisamos identificar sua localização.</string>

    <string name="yes">Sim</string>
    <string name="noWait">Não, vou aguardar</string>
    <string name="cancelConnection">Cancelar conexão</string>
    <string name="reallyCancel">Você realmente deseja cancelar esta conexão? </string>

    <string name="cities">Cidades</string>

    <string name="translationDescription">Apresentar tradução das mensagens recebidas</string>
    <string name="changeLanguage">Alterar idioma do aplicativo</string>

    <string name="turnBack">Voltar</string>
    <string name="guideUnavailable">Este guia já está conectado a outro, tente novamente quando estiver disponível</string>
    
    <string name="evaluateGuide">Por favor, avalie seu guia</string>
    <string name="thanks">Obrigado!</string>
    
    <string name="checkFields">Verifique o(s) dado(s) do(s) campo(s) em vermelho</string>
    <string name="emailOrPass">E-mail ou senha incorreto(s)</string>
    <string name="disconnected">Seu guia abandonou a conversa</string>
    <string name="age18">Ops, você não possui idade suficiente para utilizar o aplicativo...</string>
    <string name="emailExist">Ops, já existe um cadastro com este email</string>

    <string name="checkEmail">Verifique seu email</string>
    <string name="enterEmail">Informe seu email</string>
    <string name="noneEmail">Nenhum email encontrado</string>

    <string name="confirmLeftSession">Tem certeza que deseja abandonar a conversa?</string>
    <string name="no">Não</string>
</resources>
