<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:id="@+id/group_settings">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_changeInterests"
            android:title="@string/changeInterests" />
    </group>

    <group
        android:id="@+id/group_logout"
        android:checkableBehavior="single">
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout" />
    </group>

</menu>
