<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <view
                android:id="@+id/view2"
                class="android.support.v7.widget.ActionMenuView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/actionBarHeight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:ems="10"
                    android:hint="@string/name"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/textColor" />

                <EditText
                    android:id="@+id/editTextDateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:ems="10"
                    android:hint="@string/dateOfBirth"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/textColor"/>

                <EditText
                    android:id="@+id/editTextUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/textColor"/>

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    android:textColor="@color/textColor"/>

                <EditText
                    android:id="@+id/editTextOccupation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:ems="10"
                    android:hint="@string/occupation"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/textColor" />

                <!-- android:id="@+id/editTextLanguage" -->
                <Spinner
                    android:id="@+id/spinnerLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:ems="10"
                    android:spinnerMode="dialog"
                    android:prompt="@string/language"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:drawSelectorOnTop="false"
                    style="@style/spinner_style"
                    android:textColor="@color/textColor"
                    />

                <EditText
                    android:id="@+id/editTextLocalization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:ems="10"
                    android:hint="@string/localization"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/buttonContinue"
                    android:layout_weight="1"
                    android:background="@drawable/pattern_button"
                    android:text="@string/toContinue"
                    style="@style/patternSmallButton"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="right"/>

            </LinearLayout>
        </LinearLayout>
     </ScrollView>
</RelativeLayout>