<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewCurrently"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/currently"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/textViewTimeThere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/timeThere"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="@dimen/activity_horizontal_margin">

                <Button
                    android:id="@+id/buttonReject"
                    style="@style/patternSmallButton"
                    android:background="@drawable/selector_button"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/reject" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/activity_horizontal_margin">

                <Button
                    android:id="@+id/buttonAccept"
                    style="@style/patternSmallButton"
                    android:background="@drawable/pattern_button_select"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/accept" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


