<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/progress_bar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <view
                android:id="@+id/view2"
                class="android.support.v7.widget.ActionMenuView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/actionBarHeight" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="288dp"
                android:layout_height="178dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                app:srcCompat="@mipmap/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextUserEmail"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    style="@style/editTextEmailPass_style"/>

                <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/editTextEmailPass_style"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <view
                    android:id="@+id/view24"
                    class="android.support.v7.widget.ActionMenuView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/actionBarHeight" />

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_weight="1"
                    android:background="@drawable/selector_button"
                    android:text="@string/logIn"
                    style="@style/patternButton"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/textForgotPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/forgetPass"
                    android:textAllCaps="false"
                    android:textColor="@color/textColor" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>