<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="22dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewGuideRejected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="23dp"
                android:text="@string/guideRejected"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewTryAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tryAgain"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="23dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/activity_horizontal_margin">

                <Button
                    android:id="@+id/buttonBack"
                    style="@style/patternSmallButton"
                    android:background="@drawable/selector_button"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/turnBack" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>