<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/progress_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewMeetCulture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/meetCulture"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewToStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/toStart" />
    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/buttonRamdom"
                style="@style/patternSmallButton"
                android:background="@drawable/selector_button"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/ramdom" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/buttonByRegion"
                style="@style/patternSmallButton"
                android:background="@drawable/selector_button"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/byRegion" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>